{
    "name": "InputActions",
    "maps": [
        {
            "name": "ShootingRange",
            "id": "10a68ee6-5191-441a-9466-ac90838a273e",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "e7d4d44e-d025-4ea6-87f5-7662a89385a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootPos",
                    "type": "Value",
                    "id": "16275ae1-7d44-4501-869e-3c9424c3ab1a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd6a8d0c-cb63-494a-b4e5-b07dd305133f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58f0585f-b397-42a6-a882-af149c69a7cd",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "754894f0-f3a6-4892-a6b5-b9b5cec28bfd",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0d4d89e-5727-401a-b497-c41aa8c5290e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}